<resources>
    <!-- App name -->
    <string name="app_name">Contacts</string>

    <!-- Activity names -->
    <string name="title_activity_my_contacts">My Contacts</string>
    <string name="title_activity_about_contacts">About Contacts</string>
    <string name="title_activity_add_contact">Add Contact</string>

    <!-- Action Bar strings -->
    <string name="action_search">Search</string>
    <string name="action_add_current_contact">Add Contact</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_contacts">My Contacts</string>

    <!-- My Contacts strings -->
    <string name="add_contacts">Add Contacts</string>

    <!-- About Activity Strings -->
    <string name="about">This is an App created by John Sartain | Sartain Studio | John\'s Android Studio Tutorials to provide a code reference and make it easier for new developers to learn quickly by learning from example.</string>
    <string name="copyright">Please reuse code in your project if you desire. You don\'t need to give attribution but if you can that would be appreciated. All I ask is that you don\'t sell this domestically and/or commercially for a profit or other form of gain.</string>

    <string name="new_in_this_version">• New Layout \n• New Design \n• New features</string>
    <string name="version_name">Version X.X.X</string>
    <string name="title_activity_version_information">Version Information</string>

    <!-- Add Contacts strings -->
    <string name="name_hint">Name (First Last)</string>
    <string name="phone_hint">Phone (XXX) XXX-XXXX</string>
    <string name="email_hint">Email xxxxxxxxx@xmail.com</string>
    <string name="address_hint">Address 111 SW My Street Dr</string>
    <string name="city_hint">city San Francisco</string>
    <string name="state_hint">State California</string>
    <string name="website_hint">Website yourwebsite.com</string>
    <string name="birthday_hint">Birthday month/day/year</string>
    <string name="about_hint">About this person</string>
    <string name="friend_choice">Friend</string>
    <string name="family_choice">Family</string>
    <string name="coworkers_choice">Coworkers</string>
    <string name="other_choice">Other</string>
    <string name="create_new_group_choice">Create New Group</string>
    <string name="save_contact_choice">Save Contact</string>

    <string name="version">Version</string>
    <string name="this_is_build_number">This is build number</string>
    <string name="this_is_version_number">This is version number</string>
    <string name="here_is_whats_new_in_this_version">Here is whats new in this version:</string>
    <string name="ok">OK</string>
    <string name="title_activity_settings">Settings</string>

    <string name="developer_mode_on">Developer mode is on</string>
    <string name="developer_mode_off">Developer mode is off</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="language_values">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>