<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sartainstudios.contacts.SearchContacts">

    <item
        android:id="@+id/action_add_contact"
        android:icon="@mipmap/ic_add_contact"
        android:title="@string/action_add_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_my_contacts"
        android:title="@string/action_my_contacts"
        android:icon="@mipmap/ic_people"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
