<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_accent"
    android:orientation="vertical"
    tools:context=".AddContact">

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/layout_width_and_height_match">

        <LinearLayout
            style="@style/layout_width_and_height_match"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/name_edit_text_field"
                        android:layout_width="201dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_horizontal"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/name_hint" />

                    <EditText
                        android:id="@+id/phone_edit_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        android:hint="@string/phone_hint" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/change_contact_picture"
                    android:layout_width="121dp"
                    android:layout_height="110dp"
                    android:src="@drawable/img_silhouette_question_mark"
                    android:layout_weight="0.40" />

            </LinearLayout>

            <EditText
                android:id="@+id/email_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />

            <EditText
                android:id="@+id/address_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/address_hint" />

            <EditText
                android:id="@+id/city_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/city_hint" />

            <EditText
                android:id="@+id/state_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/state_hint" />

            <EditText
                android:id="@+id/website_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website_hint" />

            <EditText
                android:id="@+id/birthday_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/birthday_hint" />

            <EditText
                android:id="@+id/about_edit_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/about_hint" />

            <RadioGroup
                style="@style/layout_width_and_height_wrap"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/friend_radio_button_option"
                    style="@style/layout_width_and_height_wrap"
                    android:checked="false"
                    android:hint="@string/friend_choice" />

                <RadioButton
                    android:id="@+id/family_radio_button_option"
                    style="@style/layout_width_and_height_wrap"
                    android:checked="false"
                    android:hint="@string/family_choice" />

                <RadioButton
                    android:id="@+id/coworker_radio_button_option"
                    style="@style/layout_width_and_height_wrap"
                    android:checked="false"
                    android:hint="@string/coworkers_choice" />

                <RadioButton
                    android:id="@+id/other_radio_button_option"
                    style="@style/layout_width_and_height_wrap"
                    android:checked="false"
                    android:hint="@string/other_choice" />

                <Button
                    android:id="@+id/create_new_option_radio_button_option"
                    style="@style/layout_width_and_height_wrap"
                    android:hint="@string/create_new_group_choice" />

            </RadioGroup>

            <Button
                android:id="@+id/save_contact"
                style="@style/layout_width_and_height_match"
                android:text="@string/save_contact_choice" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>