<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="true"
        android:entries="@array/language_list"
        android:entryValues="@array/language_values"
        android:key="language"
        android:summary="Select your language"
        android:title="Language" />

    <SwitchPreference
        android:key="developer_mode"
        android:summary="Get access to the tools the programmers use"
        android:textOff="@string/developer_mode_off"
        android:textOn="@string/developer_mode_on"
        android:title="Developer Mode" />

    <TextView
        android:id="@+id/display_version_name"
        style="@style/layout_width_and_height_wrap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:clickable="true"
        android:text="@string/version_name" />

</PreferenceScreen>